Updated documentation and laid down groundwork for new SymbolTable layout.

--- a/T Compiler/Makefile
+++ b/T Compiler/Makefile
@@ -1,4 +1,4 @@
-# Makefile for the compiler for the Simp language
+# Makefile for the compiler for the T language
 #
 # target tc builds the standard compiler
 #
